// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> renders close button 1`] = `
<div
  className="alert-0-2-1"
>
  <Row
    after={
      <withStyles(IconButton)
        onClick={[Function]}
      >
        <IconClose
          accessibilityLabel="Close"
          color="currentColor"
          inline={false}
          size={24}
        />
      </withStyles(IconButton)>
    }
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      Title
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders inline 1`] = `
<div
  className="alert-0-2-1 alert_inline-0-2-2"
>
  <Row
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      Title
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders danger alert 1`] = `
<div
  className="alert-0-2-1 alert_statusIcon-0-2-8 alert_danger-0-2-3"
>
  <Row
    before={
      <IconError
        color="#DF2323"
        decorative={true}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      danger
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders info alert 1`] = `
<div
  className="alert-0-2-1 alert_statusIcon-0-2-8 alert_info-0-2-4"
>
  <Row
    before={
      <IconInfo
        color="#6f44ff"
        decorative={true}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      info
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders muted alert 1`] = `
<div
  className="alert-0-2-1"
>
  <Row
    before={null}
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      muted
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders notice alert 1`] = `
<div
  className="alert-0-2-1 alert_statusIcon-0-2-8 alert_notice-0-2-5"
>
  <Row
    before={
      <IconFlag
        color="#1561B2"
        decorative={true}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      notice
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders success alert 1`] = `
<div
  className="alert-0-2-1 alert_statusIcon-0-2-8 alert_success-0-2-6"
>
  <Row
    before={
      <IconCheckAlt
        color="#4AA83E"
        decorative={true}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      success
    </Text>
  </Row>
</div>
`;

exports[`<Alert /> renders statuses renders warning alert 1`] = `
<div
  className="alert-0-2-1 alert_statusIcon-0-2-8 alert_warning-0-2-7"
>
  <Row
    before={
      <IconWarning
        color="#FFB400"
        decorative={true}
        inline={false}
        size={24}
      />
    }
    middleAlign={true}
  >
    <Text
      bold={true}
    >
      warning
    </Text>
  </Row>
</div>
`;
